# daily-tracker

./: .gitignore  readme.md
.claude/: settings.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1657675823e1_add_fk_indexes.py  bdb61d265314_init.py
backend/app/: config.py  main.py  scheduler.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  goal.py  rep.py  rep_type.py
backend/app/routers/: dashboard.py  debrief.py  goals.py  history.py  rep_types.py  reps.py  summary.py
backend/app/schemas/: goal.py  rep.py  rep_type.py
backend/app/services/: debrief.py  email.py  google_calendar.py  summary.py
backend/app/static/: style.css
backend/app/templates/: dashboard.html
backend/scripts/: google_oauth.py
frontend/: README.md  package-lock.json  vite.config.js
frontend/src/: api.js
frontend/src/components/: Analytics.jsx  ChainsList.jsx  ChainsVisualization.jsx  Dashboard.jsx  Debrief.jsx  FirstRepStrip.jsx  GoalProgressionsVisualization.jsx  GoalsManagement.jsx  History.jsx  Nav.jsx  RepItem.jsx  RepScheduling.jsx  RhythmChart.jsx  StatsHeader.jsx  TodayReps.jsx  WeekView.jsx
frontend/src/styles/: dashboard.css
